Prevent duration wrapping

--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -56,6 +56,9 @@
     &__actions {
         margin-top: 1rem;
     }
+    &__duration {
+        white-space: nowrap;
+    }
 }
 
 .event--theme {
